# gen/types/AuthUser.ts
@@ -1,0 +1,10 @@
+export type AuthUser = {
+    /**
+     * @type string
+    */
+    email: string;
+    /**
+     * @type string
+    */
+    password: string;
+};
