# gen/types/CreateUser.ts
@@ -1,0 +1,14 @@
+export type CreateUser = {
+    /**
+     * @type string
+    */
+    email: string;
+    /**
+     * @type string
+    */
+    full_name: string;
+    /**
+     * @type string
+    */
+    password: string;
+};
