# gen/types/User.ts
@@ -1,0 +1,22 @@
+export type User = {
+    /**
+     * @type string | undefined
+    */
+    created_at?: string;
+    /**
+     * @type string | undefined
+    */
+    email?: string;
+    /**
+     * @type string | undefined
+    */
+    full_name?: string;
+    /**
+     * @type integer | undefined
+    */
+    id?: number;
+    /**
+     * @type string | undefined
+    */
+    updated_at?: string;
+};
