# gen/types/UserWithToken.ts
@@ -1,0 +1,9 @@
+import { User } from "./User";
+
+ export type UserWithToken = {
+    /**
+     * @type string | undefined
+    */
+    token?: string;
+    user?: User;
+};
