# gen/types/index.ts
@@ -1,0 +1,12 @@
+export * from "./AuthUser";
+export * from "./CreateDiscount";
+export * from "./CreateUser";
+export * from "./Discount";
+export * from "./GetAdminDiscounts";
+export * from "./GetAdminUsers";
+export * from "./PostAdminAuth";
+export * from "./PostAdminAuthToken";
+export * from "./PostAdminDiscounts";
+export * from "./PostAdminUsers";
+export * from "./User";
+export * from "./UserWithToken";
